--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>实盘交易回顾</title>
+    <title>daily chances</title>
     <style>
         #container {
             display: flex;
